# revlimiter

./: .gitignore  README.md  leakybucket.py  main.py  manager.py  pyproject.toml  test.py  tokenbucket.py
.github/workflows/: publish.yml  test.yml
src/revlimiter/: __init__.py  leakybucket.py  revlimit.py  tokenbucket.py
tests/: test_revlimiter.py
