[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revlimiter"
version = "0.1.0"
description = "A simple and efficient rate limiting library implementing Token Bucket and Leaky Bucket algorithms."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gemini CLI", email = "nirbhayerror@gmail.com" },
]
keywords = [
    "ratelimit",
    "token-bucket",
    "leaky-bucket",
    "api",
    "throttle",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/err0rgod/revlimiter"
Bug-Tracker = "https://github.com/err0rgod/revlimiter/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/revlimiter"]
